--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
 		
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/img9.jpeg" data-lightbox="gallery-mf">
+            <a href="img/img9.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/img9.jpeg" height="200" alt="" class="img-fluid">
+                <img src="img/img9.jpg" height="200" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
