--- a/index.html
+++ b/index.html
@@ -381,18 +381,18 @@
           </div>
         </div>
 		
-        <div class="col-md-4">
+         <div class="col-md-4">
           <div class="work-box">
             <a href="img/img9.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/img9.jpg" height="200" alt="" class="img-fluid">
+                <img src="img/img9.jpg" alt="" class="img-fluid" width="250">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">Yoga and Therapy</h2>
                     <div class="w-more">
-                      <span class="w-ctegory"></span>  <span class="w-date"></span>
+                      <span class="w-ctegory"></span><span class="w-date"></span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -405,7 +405,6 @@
             </a>
           </div>
         </div>
-         
       </div>
     </div>
   </section>
@@ -499,7 +498,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      If you wish to ask me anything about yoga or want to contact me at any time please go through it.
+                      If you wish to ask me anything about General yoga or Therapy yoga and want to contact me at any time please go through it.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> No 6,23rd cross Cubbonpet near avenue road Banglore-560002 </li>
